Fix #2006 "Don't let long title wrap in header or footer"

--- a/src/resources/apps/fr/style/form-runner-base.css
+++ b/src/resources/apps/fr/style/form-runner-base.css
@@ -600,11 +600,15 @@
   }
   .fr-header-title {
     position: running(header-title);
-    display: inline;
-    font-size: 14px;
   }
   .fr-footer-title {
     position: running(footer-title);
+  }
+  .fr-header-title div,
+  .fr-footer-title div {
+    max-height: 26px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 @page {
